--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           Theme By <a target="_blank" href="https://github.com/levblanc">Levblanc.</a>
           Inspired By <a target="_blank" href="https://github.com/klugjo/hexo-theme-clean-blog">Clean Blog.</a>
         <p class="copyright text-muted">
-          Powered By <a target="_blank" href="https://hexo.io/">Hexo.</a> <a href="http://www.beian.miit.gov.cn/"  target="_blank">浙ICP备2022009786号</a>
+          Powered By <a target="_blank" href="https://hexo.io/">Hexo.</a> <a href="http://beian.miit.gov.cn/"  target="_blank">浙ICP备2022009786号</a>
         </p>
       </div>
     </div>
